--- a/finguardian/src/main/resources/application.properties
+++ b/finguardian/src/main/resources/application.properties
@@ -1,7 +1,30 @@
 spring.application.name=finguardian
+
+# Database Configuration
 spring.datasource.url=jdbc:mysql://localhost:3306/finguardian
 spring.datasource.username=root
 spring.datasource.password=Raja@1234
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+
+# Server Configuration
+server.port=8081
+
+# Email Configuration (Brevo / Sendinblue SMTP)
+spring.mail.host=smtp-relay.brevo.com
+spring.mail.port=587
+spring.mail.username=958c19002@smtp-brevo.com
+spring.mail.password=EBqcZvzRgYXFG4aJ
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.protocol=smtp
+spring.mail.properties.mail.smtp.from=pradhanraja780@gmail.com
+
+# Logging for troubleshooting
+
+logging.level.org.springframework.mail=DEBUG
+logging.level.org.springframework=DEBUG
+
+
+jwt.secret=2b8e7c7e-4e2a-4b1a-9c2e-8f7e2d3c4b5a
