--- a/finguardian/src/main/resources/application.properties
+++ b/finguardian/src/main/resources/application.properties
@@ -28,3 +28,8 @@ logging.level.org.springframework=DEBUG
 
 
 jwt.secret=2b8e7c7e-4e2a-4b1a-9c2e-8f7e2d3c4b5a
+
+money.manager.frontend.url=http://localhost:5173
+app.activation.url=http://localhost:8081
+spring.profiles.active=prod
+
