--- a/finguardian/render.yaml
+++ b/finguardian/render.yaml
@@ -2,8 +2,8 @@ services:
   - type: web
     name: finguardian
     env: docker
-    dockerfilePath: ./Dockerfile
-    buildContext: .
+    dockerfilePath: ./FinGuardian/Dockerfile
+    buildContext: ./FinGuardian
     plan: free
     envVars:
       - key: PORT
