--- a/finguardian/src/main/resources/application.properties
+++ b/finguardian/src/main/resources/application.properties
@@ -11,25 +11,22 @@ spring.jpa.show-sql=true
 # Server Configuration
 server.port=8081
 
-# Email Configuration (Brevo / Sendinblue SMTP)
+# Brevo (Sendinblue) SMTP Email Configuration
 spring.mail.host=smtp-relay.brevo.com
 spring.mail.port=587
 spring.mail.username=958c19002@smtp-brevo.com
 spring.mail.password=EBqcZvzRgYXFG4aJ
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
-spring.mail.protocol=smtp
-spring.mail.properties.mail.smtp.from=pradhanraja780@gmail.com
+spring.mail.from=pradhanraja780@gmail.com
 
-# Logging for troubleshooting
-
+# Logging (for debugging)
 logging.level.org.springframework.mail=DEBUG
 logging.level.org.springframework=DEBUG
 
-
+# JWT Secret Key
 jwt.secret=2b8e7c7e-4e2a-4b1a-9c2e-8f7e2d3c4b5a
 
+# Application URLs
 money.manager.frontend.url=http://localhost:5173
-app.activation.url=https://finguardian.onrender.com
-spring.profiles.active=prod
-
+app.activation.url=https://finguardian.onrender.com/api/activate
