application file commit

--- a/finguardian/src/main/resources/application-prod.properties
+++ b/finguardian/src/main/resources/application-prod.properties
@@ -20,8 +20,17 @@ spring.mail.password=EBqcZvzRgYXFG4aJ
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.protocol=smtp
-spring.mail.properties.mail.smtp.from=pradhanraja780@gmail.com
+#spring.mail.properties.mail.smtp.from=pradhanraja780@gmail.com
+spring.mail.from=pradhanraja780@gmail.com
+
 
 # Logging (optional)
 logging.level.org.springframework.mail=DEBUG
 logging.level.org.springframework=DEBUG
+
+# JWT Secret
+jwt.secret=2b8e7c7e-4e2a-4b1a-9c2e-8f7e2d3c4b5a
+
+# App URLs
+money.manager.frontend.url=http://localhost:5173
+app.activation.url=https://finguardian.onrender.com/api/activate
