--- a/finguardian/src/main/resources/application.properties
+++ b/finguardian/src/main/resources/application.properties
@@ -1,32 +1,40 @@
 spring.application.name=finguardian
 
-# Database Configuration
-spring.datasource.url=jdbc:mysql://localhost:3306/finguardian
+
+
+# ---- MySQL for Local Dev ----
+spring.datasource.url=jdbc:mysql://localhost:3306/finguardian?useSSL=false&allowPublicKeyRetrieval=true
 spring.datasource.username=root
 spring.datasource.password=Raja@1234
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
-# Server Configuration
 server.port=8081
 
-# Brevo (Sendinblue) SMTP Email Configuration
+# ---- Brevo SMTP ----
 spring.mail.host=smtp-relay.brevo.com
 spring.mail.port=587
 spring.mail.username=958c19002@smtp-brevo.com
 spring.mail.password=EBqcZvzRgYXFG4aJ
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.protocol=smtp
+#spring.mail.properties.mail.smtp.from=pradhanraja780@gmail.com
 spring.mail.from=pradhanraja780@gmail.com
 
-# Logging (for debugging)
+
+# ---- Logging ----
 logging.level.org.springframework.mail=DEBUG
 logging.level.org.springframework=DEBUG
 
-# JWT Secret Key
+# ---- JWT Secret Key ----
 jwt.secret=2b8e7c7e-4e2a-4b1a-9c2e-8f7e2d3c4b5a
 
-# Application URLs
+# ---- URLs ----
 money.manager.frontend.url=http://localhost:5173
 app.activation.url=https://finguardian.onrender.com/api/activate
+spring.profiles.active=prod
+
