--- a/finguardian/src/main/resources/application.properties
+++ b/finguardian/src/main/resources/application.properties
@@ -23,7 +23,9 @@ spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.protocol=smtp
 #spring.mail.properties.mail.smtp.from=pradhanraja780@gmail.com
-spring.mail.from=pradhanraja780@gmail.com
+#spring.mail.from=pradhanraja780@gmail.com
+spring.mail.properties.mail.smtp.from=pradhanraja780@gmail.com
+
 
 
 # ---- Logging ----
