application file commit change only in app prop not in prod propo

--- a/finguardian/src/main/resources/application-prod.properties
+++ b/finguardian/src/main/resources/application-prod.properties
@@ -5,32 +5,40 @@ spring.datasource.password=kwiVomER1ycBxlTL2E9Rx6mlv4Bikrl6
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 # JPA / Hibernate
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
+#spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
-# Server
-server.port=8081
+## Server
+#server.port=8081
+#
+## Email (Brevo / Sendinblue SMTP)
+#spring.mail.host=smtp-relay.brevo.com
+#spring.mail.port=587
+#spring.mail.username=958c19002@smtp-brevo.com
+#spring.mail.password=EBqcZvzRgYXFG4aJ
+#spring.mail.properties.mail.smtp.auth=true
+#spring.mail.properties.mail.smtp.starttls.enable=true
+#spring.mail.protocol=smtp
+##spring.mail.properties.mail.smtp.from=pradhanraja780@gmail.com
+#spring.mail.from=pradhanraja780@gmail.com
 
-# Email (Brevo / Sendinblue SMTP)
-spring.mail.host=smtp-relay.brevo.com
-spring.mail.port=587
-spring.mail.username=958c19002@smtp-brevo.com
-spring.mail.password=EBqcZvzRgYXFG4aJ
-spring.mail.properties.mail.smtp.auth=true
-spring.mail.properties.mail.smtp.starttls.enable=true
-spring.mail.protocol=smtp
-#spring.mail.properties.mail.smtp.from=pradhanraja780@gmail.com
-spring.mail.from=pradhanraja780@gmail.com
+
+## Logging (optional)
+#logging.level.org.springframework.mail=DEBUG
+#logging.level.org.springframework=DEBUG
+#
+## JWT Secret
+#jwt.secret=2b8e7c7e-4e2a-4b1a-9c2e-8f7e2d3c4b5a
+#
+## App URLs
+#money.manager.frontend.url=http://localhost:5173
+#app.activation.url=https://finguardian.onrender.com/api/activate
 
 
-# Logging (optional)
-logging.level.org.springframework.mail=DEBUG
-logging.level.org.springframework=DEBUG
 
-# JWT Secret
-jwt.secret=2b8e7c7e-4e2a-4b1a-9c2e-8f7e2d3c4b5a
-
-# App URLs
-money.manager.frontend.url=http://localhost:5173
-app.activation.url=https://finguardian.onrender.com/api/activate
+#spring.datasource.url=jdbc:postgresql://dpg-d3l2j82dbo4c73ei3dbg-a.singapore-postgres.render.com/moneymanager_4duq?sslmode=require
+#spring.datasource.username=moneymanager_4duq_user
+#spring.datasource.password=kwiVomER1ycBxlTL2E9Rx6mlv4Bikrl6
+#spring.datasource.driver-class-name=org.postgresql.Driver
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
