--- a/finguardian/src/main/resources/application.properties
+++ b/finguardian/src/main/resources/application.properties
@@ -8,6 +8,10 @@ spring.datasource.username=root
 spring.datasource.password=Raja@1234
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
+
+
+server.servlet.context-path=/api
+
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
@@ -17,14 +21,14 @@ server.port=8081
 # ---- Brevo SMTP ----
 spring.mail.host=smtp-relay.brevo.com
 spring.mail.port=587
-spring.mail.username=958c19002@smtp-brevo.com
-spring.mail.password=EBqcZvzRgYXFG4aJ
+spring.mail.username=958c19003@smtp-brevo.com
+spring.mail.password=Y5banhMrWOwDXZQt
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.protocol=smtp
 #spring.mail.properties.mail.smtp.from=pradhanraja780@gmail.com
-#spring.mail.from=pradhanraja780@gmail.com
-spring.mail.properties.mail.smtp.from=pradhanraja780@gmail.com
+spring.mail.from=pradhanraja780@gmail.com
+
 
 
 
