application file commit change only in app prop not in prod propo

--- a/finguardian/src/main/resources/application-prod.properties
+++ b/finguardian/src/main/resources/application-prod.properties
@@ -15,8 +15,8 @@ server.port=8081
 # Email (Brevo / Sendinblue SMTP)
 spring.mail.host=smtp-relay.brevo.com
 spring.mail.port=587
-spring.mail.username=958c19003@smtp-brevo.com
-spring.mail.password=Y5banhMrWOwDXZQt
+spring.mail.username=pradhanraja780@gmail.com
+spring.mail.password=Raja@1234
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.protocol=smtp
