application file commit change only in app prop not in prod propo

--- a/finguardian/src/main/resources/application-prod.properties
+++ b/finguardian/src/main/resources/application-prod.properties
@@ -22,6 +22,7 @@ spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.protocol=smtp
 #spring.mail.properties.mail.smtp.from=pradhanraja780@gmail.com
 spring.mail.from=pradhanraja780@gmail.com
+spring.mail.properties.mail.smtp.from=pradhanraja780@gmail.com 
 
 
 # Logging (optional)
