--- a/finguardian/src/main/resources/application.properties
+++ b/finguardian/src/main/resources/application.properties
@@ -24,6 +24,7 @@ spring.mail.username=958c19003@smtp-brevo.com
 spring.mail.password=Y5banhMrWOwDXZQt
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.starttls.required=true
 spring.mail.protocol=smtp
 #spring.mail.properties.mail.smtp.from=pradhanraja780@gmail.com
 spring.mail.from=pradhanraja780@gmail.com
